--- a/app/src/main/res/layout/activity_explore_detail.xml
+++ b/app/src/main/res/layout/activity_explore_detail.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+<FrameLayout
+    android:id="@+id/explore_detail_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent">
+
+</FrameLayout>
 
 
 </android.support.constraint.ConstraintLayout>
