--- a/app/src/main/res/layout/full_photo_pager_item.xml
+++ b/app/src/main/res/layout/full_photo_pager_item.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/blackBackground"
-    tools:context=".ui.explore_detail.FullPhotoFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-
-    <android.support.v4.view.ViewPager
+    <ImageView
+        android:id="@+id/rover_photo_full_imageview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/photo_viewpager">
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        tools:src="@drawable/photos_1"
+        />
 
-    </android.support.v4.view.ViewPager>
-
-    <android.support.design.widget.FloatingActionButton
+   <!-- <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/photo_share_fab"
@@ -27,6 +26,5 @@
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
         android:contentDescription="@string/share_photo_cd"
-        />
-
+        />-->
 </FrameLayout>
