--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="marsLightOrange">#e77d11</color>
     
     <color name="lightText">#f0e7e7</color>
+    <color name="blackBackground">#303030</color>
 
 
 </resources>
