--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,9 @@
     <!-- Explore Details -->
 
 
+    <!-- Rover Photos -->
+    <dimen name="camera_label_test_size">16sp</dimen>
+    <dimen name="camera_label_margin">10dp</dimen>
+
+
 </resources>
