--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,13 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
+    <style name="CameraTextLabel" parent="TextAppearance.AppCompat.Display1">
+        <item name="android:textSize">@dimen/camera_label_test_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_margin">@dimen/camera_label_margin</item>
+    </style>
+
+
 </resources>
