--- a/app/src/main/res/layout/activity_mars_explore.xml
+++ b/app/src/main/res/layout/activity_mars_explore.xml
@@ -10,13 +10,23 @@
 
 
     <TextView
+        style="@style/TextAppearance.AppCompat.Title"
         android:id="@+id/explore_mars_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="6dp"
         android:text="@string/explore_mars"
         android:gravity="center_horizontal"/>
 
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mars_explore_categories_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/explore_mars_title"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 
