--- a/app/src/main/res/layout/rover_explore_list_item.xml
+++ b/app/src/main/res/layout/rover_explore_list_item.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
-            android:background="@android:color/black"
+            android:background="@color/blackBackground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
