--- a/app/src/main/res/layout/fragment_mars_facts.xml
+++ b/app/src/main/res/layout/fragment_mars_facts.xml
@@ -1,63 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/blackBackground"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.explore_detail.MarsFactsFragment">
 
-
-    <TextView
-        android:layout_margin="30dp"
-        style="@style/Base.TextAppearance.AppCompat.Display1"
-        android:textSize="22sp"
-        android:gravity="center_horizontal"
-        android:id="@+id/fact_name_text"
+    <android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text=""
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="match_parent"
+        android:layout_gravity="top"
+        android:background="@color/blackBackground"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".ui.explore_detail.MarsFactsFragment">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="0dp"
-        app:cardCornerRadius="@dimen/default_cardview_corner_radius"
-        android:layout_height="0dp"
-        android:elevation="@dimen/default_cardview_elevation"
-        android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@id/fact_name_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/fact_url_text">
-        <ScrollView
-           android:layout_width="match_parent"
-            android:layout_height="wrap_content">
         <TextView
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp"
             android:layout_margin="10dp"
-            tools:text="This is a fact!"
-            android:gravity="center"
-            android:id="@+id/fact_description_text"
+            style="@style/MarsFactsTextTitle"
+            android:id="@+id/fact_name_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/mars_facts"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageView
+            android:contentDescription="@string/reload_new_mars_fact"
+            android:id="@+id/reload_fact"
+            android:src="@drawable/ic_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginEnd="20dp"
+            android:foregroundGravity="center_horizontal"
+            app:layout_constraintEnd_toEndOf="@id/fact_name_text"
+            app:layout_constraintTop_toTopOf="@id/fact_name_text"
+            app:layout_constraintBottom_toBottomOf="@id/fact_name_text"
             />
-   </ScrollView>
-    </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            app:cardCornerRadius="@dimen/default_cardview_corner_radius"
+            android:layout_height="0dp"
+            android:elevation="@dimen/default_cardview_elevation"
+            android:layout_margin="10dp"
 
-    <TextView
-        style="@style/TextAppearance.AppCompat.Body2"
-        android:textSize="18sp"
-        android:textColor="@color/lightText"
-        android:id="@+id/fact_url_text"
-        android:layout_width="0dp"
-        android:gravity="center"
-        tools:text="http://www.space-facts.com/Mars"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/fact_name_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/fact_url_text">
+            <ScrollView
+               android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+            <TextView
 
+                style="@style/MarsFactsText"
+                tools:text="This is a fact!"
+                android:padding="6dp"
+                android:id="@+id/fact_description_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+       </ScrollView>
+        </android.support.v7.widget.CardView>
+
+        <TextView
+            style="@style/MarsFactBottomLink"
+            android:id="@+id/fact_url_text"
+            android:layout_width="0dp"
+            tools:text="http://www.space-facts.com/Mars"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
