--- a/app/src/main/res/layout/fragment_full_photo.xml
+++ b/app/src/main/res/layout/fragment_full_photo.xml
@@ -6,7 +6,7 @@
     android:id="@+id/full_photo_coordinator_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/blackBackground"
-    tools:context=".ui.explore_detail.FullPhotoFragment">
+    tools:context=".ui.explore_detail.rover_photos.FullPhotoFragment">
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
