--- a/app/src/main/res/layout/fragment_mars_weather.xml
+++ b/app/src/main/res/layout/fragment_mars_weather.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:background="@color/blackBackground"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".ui.explore_detail.MarsWeatherFragment">
+        tools:context=".ui.explore_detail.mars_weather.MarsWeatherFragment">
 
 
         <android.support.v7.widget.CardView
