--- a/app/src/main/res/layout/fact_widget.xml
+++ b/app/src/main/res/layout/fact_widget.xml
@@ -43,9 +43,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
-
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
+        android:contentDescription="@string/daily_mars_fact"
         android:textColor="@color/lightText"
         android:textSize="18sp"
         android:textStyle="bold|italic" />
