--- a/app/src/main/res/xml/fact_widget_info.xml
+++ b/app/src/main/res/xml/fact_widget_info.xml
@@ -8,5 +8,7 @@
     android:minResizeWidth="110dp"
     android:previewImage="@drawable/marsexplorericon"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="5400000"
+    android:updatePeriodMillis="120000"
     android:widgetCategory="home_screen"/>
+
+<!--  todo change update period!  -->
