--- a/app/src/main/res/values/bools.xml
+++ b/app/src/main/res/values/bools.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="pref_tweets_default">true</bool>
+    <bool name="pref_tweets_default">false</bool>
     <bool name="pref_limit_photos_default">true</bool>
+    <bool name="pref_rover_job_scheduler_default">true</bool>
 
 </resources>
