--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,10 @@
         <item name="android:textColor">@color/lightText</item>
     </style>
 
+    <style name="MarsSettingsTheme" parent="AppTheme">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColorSecondary">@color/lightText</item>
+    </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
