--- a/app/src/main/res/layout/fragment_favorite_photos.xml
+++ b/app/src/main/res/layout/fragment_favorite_photos.xml
@@ -10,6 +10,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/favorite_photo_card_margin"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".ui.explore_detail.favorites.FavoritePhotosFragment">
 
