--- a/app/src/main/res/layout/activity_mars_explore.xml
+++ b/app/src/main/res/layout/activity_mars_explore.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/mars_explore_coordinator_layout"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+
+    <include
+        layout="@layout/mars_explore_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+
+<!--
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -34,10 +45,5 @@
             app:layout_constraintTop_toBottomOf="@id/explore_mars_title"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-
-
-
-
-
-    </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>-->
 </android.support.design.widget.CoordinatorLayout>
