--- a/app/src/main/res/layout/fragment_rover_science_pager.xml
+++ b/app/src/main/res/layout/fragment_rover_science_pager.xml
@@ -8,8 +8,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/blackBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="@dimen/rover_science_outside_margin"
+    android:layout_marginEnd="@dimen/rover_science_outside_margin"
     tools:context=".ui.explore_detail.rover_science.RoverSciencePagerFragment">
 
 
@@ -49,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@id/science_image_cardview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
         >
         <TextView
             style="@style/RoverSciencePagerText"
