--- a/app/src/main/res/layout/full_photo_pager_item.xml
+++ b/app/src/main/res/layout/full_photo_pager_item.xml
@@ -12,6 +12,7 @@
         android:id="@+id/rover_photo_full_imageview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         tools:src="@drawable/photos_1"
