--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_width="match_parent"
+<android.support.v7.widget.CardView
+    android:layout_width="@dimen/main_cardview_width"
     android:layout_height="@dimen/main_cardview_height"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:elevation="1dp"
+    android:elevation="@dimen/default_cardview_elevation"
     android:layout_marginStart="@dimen/main_card_start_end_margin"
     android:layout_marginEnd="@dimen/main_card_start_end_margin"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
+    android:layout_marginTop="@dimen/main_card_top_bottom_margin"
+    android:layout_marginBottom="@dimen/main_card_top_bottom_margin"
     app:cardCornerRadius="@dimen/default_cardview_corner_radius"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
@@ -19,7 +20,6 @@
         android:layout_height="match_parent"
         android:src="@drawable/explore_main"
         android:scaleType="centerCrop"
-
         android:background="@android:color/black"/>
 
 
