--- a/app/src/main/res/layout/mars_explore_list_item.xml
+++ b/app/src/main/res/layout/mars_explore_list_item.xml
@@ -5,10 +5,10 @@
     style="@style/CardView.Light"
     android:elevation="@dimen/default_cardview_elevation"
     app:cardCornerRadius="@dimen/default_cardview_corner_radius"
-    android:layout_marginStart="4dp"
-    android:layout_marginEnd="4dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
+    android:layout_marginStart="@dimen/mars_explore_cardview_start_end_margin"
+    android:layout_marginEnd="@dimen/mars_explore_cardview_start_end_margin"
+    android:layout_marginTop="@dimen/mars_explore_cardview_top_bottom_margin"
+    android:layout_marginBottom="@dimen/mars_explore_cardview_top_bottom_margin"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -31,9 +31,11 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageView
+            android:contentDescription="@string/mars_category_cd"
             android:id="@+id/mars_explore_cardview_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:scaleType="centerCrop"
             android:background="@color/blackBackground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
