--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="main_card_start_end_margin">60dp</dimen>
-    <dimen name="main_cardview_height">200dp</dimen>
+
+    <bool name="is_land">true</bool>
+
+    <dimen name="main_card_start_end_margin">20dp</dimen>
+    <dimen name="main_cardview_width">200dp</dimen>
+    <dimen name="main_cardview_height">-1px</dimen>
+
 </resources>
